Сделана сетка на флоатах

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,67 @@ h2 {
   font-weight: 500;
   font-family: "PT Sans Narrow Bold", "Arial", sans-serif;
 }
+
+.row {
+
+}
+
+.col {
+  float: left;
+  padding: 0 10px;
+  box-sizing: border-box;
+}
+
+.s-1 {
+  width: 8.3333333333333333333333333333333%;
+}
+
+.s-2 {
+  width: 16.666666666666666666666666666667%;
+}
+
+.s-3 {
+  width: 25%;
+}
+
+.s-4 {
+  width: 33.333333333333333333333333333333%;
+}
+
+.s-5 {
+  width: 41.666666666666666666666666666667%;
+}
+
+.s-6 {
+  width: 50%;
+}
+
+.s-7 {
+  width: 58.333333333333333333333333333333%;
+}
+
+.s-8 {
+  width: 66.666666666666666666666666666667%;
+}
+
+.s-9 {
+  width: 75%;
+}
+
+.s-10 {
+  width: 83.333333333333333333333333333333%;
+}
+
+.s-11 {
+  width: 91.666666666666666666666666666667%;
+}
+
+.s-12 {
+  width: 100%;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
