--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ h2 {
 }
 
 .row {
-
+  width: 100%;
 }
 
 .col {
   float: left;
   padding: 0 10px;
   box-sizing: border-box;
+  border: 1px solid red;
 }
 
 .s-1 {
