--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-size: 16px;
   line-height: 24px;
@@ -22,8 +27,14 @@ h2 {
   font-family: "PT Sans Narrow Bold", "Arial", sans-serif;
 }
 
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 .row {
-  width: 100%;
+
 }
 
 .col {
@@ -85,4 +96,81 @@ h2 {
   content: "";
   display: table;
   clear: both;
+}
+
+.site-navigation__item {
+  float: left;
+  margin-right: 10px;
+  list-style: none;
+}
+
+.user__login {
+  float: right;
+}
+
+.logo {
+  text-align: center;
+}
+
+.features {
+  text-align: center;
+}
+
+.btn {
+  float: left;
+  box-sizing: border-box;
+  width: 160px;
+}
+
+.btn--large {
+  width: 320px;
+}
+
+.appointment-form__field {
+  float: left;
+  box-sizing: border-box;
+  width: 140px;
+  margin: 0 10px;
+}
+
+.social__text {
+  text-align: center;
+}
+
+.social__btn {
+  float: left;
+  margin: 0 10px;
+}
+
+.copyright {
+  text-align: right;
+}
+
+.btn--copyright {
+  float: none;
+}
+
+.breadcrumbs__item {
+  float: left;
+  margin-right: 10px;
+  list-style: none;
+}
+
+.filter__condition {
+  display: block;
+}
+
+.btn--buy {
+  float: none;
+}
+
+.btn--paginator {
+  float: left;
+  width: auto;
+  margin-right: 10px;
+  list-style: none;
+}
+
+.description__vendor-code {
+  float: right;
 }
