--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   line-height: 24px;
   color: #000000;
   font-weight: 100;
-  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  font-family: "PT Sans Narrow", "Arial", sanrow__col--sserif;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h1 {
   line-height: 42px;
   color: #000000;
   font-weight: 600;
-  font-family: "PT Sans Narrow Bold", "Arial", sans-serif;
+  font-family: "PT Sans Narrow Bold", "Arial", sanrow__col--sserif;
 }
 
 h2 {
@@ -24,7 +24,7 @@ h2 {
   line-height: 30px;
   color: #000000;
   font-weight: 500;
-  font-family: "PT Sans Narrow Bold", "Arial", sans-serif;
+  font-family: "PT Sans Narrow Bold", "Arial", sanrow__col--sserif;
 }
 
 .container {
@@ -37,58 +37,57 @@ h2 {
 
 }
 
-.col {
+.row__col {
   float: left;
   padding: 0 10px;
-  box-sizing: border-box;
-  /*border: 1px solid red;*/
+  box-sizing: border-box;  
 }
 
-.s-1 {
+.row__col--s1 {
   width: 8.3333333333333333333333333333333%;
 }
 
-.s-2 {
+.row__col--s2 {
   width: 16.666666666666666666666666666667%;
 }
 
-.s-3 {
+.row__col--s3 {
   width: 25%;
 }
 
-.s-4 {
+.row__col--s4 {
   width: 33.333333333333333333333333333333%;
 }
 
-.s-5 {
+.row__col--s5 {
   width: 41.666666666666666666666666666667%;
 }
 
-.s-6 {
+.row__col--s6 {
   width: 50%;
 }
 
-.s-7 {
+.row__col--s7 {
   width: 58.333333333333333333333333333333%;
 }
 
-.s-8 {
+.row__col--s8 {
   width: 66.666666666666666666666666666667%;
 }
 
-.s-9 {
+.row__col--s9 {
   width: 75%;
 }
 
-.s-10 {
+.row__col--s10 {
   width: 83.333333333333333333333333333333%;
 }
 
-.s-11 {
+.row__col--s11 {
   width: 91.666666666666666666666666666667%;
 }
 
-.s-12 {
+.row__col--s12 {
   width: 100%;
 }
 
@@ -173,4 +172,8 @@ h2 {
 
 .description__vendor-code {
   float: right;
+}
+
+.items {
+  padding: 0;
 }
